--- a/index.wxml
+++ b/index.wxml
@@ -1,28 +1,30 @@
 <view class="index">
-  <view class="index-hd">
-    <image class="index-logo" src="/resources/images/kind/logo.png"></image>
-    <view class="index-desc">以下将展示小程序官方组件能力，组件样式仅供参考，开发者可根据自身需求自定义组件样式，具体属性参数详见小程序开发文档。</view>
-  </view>
-  <view class="index-bd">
-    <view class="list">
-
-      <block>
-        <navigator open-type="reLaunch" url="/modules/party-gift-randomizer/pages/index/index?id=75" hover-class="navigator-hover" class='list-item'>
-          <view id="{{item.id}}" class="list-item-hd">
-            <view class="list-text">Secret Halloween</view>
-            <image class="list-img" src="/resources/images/kind/form.png"></image>
-          </view>
-        </navigator>
-
-        <navigator open-type="reLaunch" url="/modules/wolf-law-officer/pages/index/index" hover-class="navigator-hover" class='list-item'>
-          <view id="{{item.id}}" class="list-item-hd">
-            <view class="list-text">狼人杀小法官</view>
-            <image class="list-img" src="/resources/images/kind/form.png"></image>
-          </view>
-        </navigator>
-
-      </block>
-
+    <view class="index-hd">
+        <image class="index-logo" src="/resources/images/kind/logo.png"></image>
+        <view class="index-desc">以下将展示小程序官方组件能力，组件样式仅供参考，开发者可根据自身需求自定义组件样式，具体属性参数详见小程序开发文档。</view>
     </view>
-  </view>
+    <view class="index-bd">
+        <view class="list">
+
+            <block>
+                <navigator open-type="reLaunch" url="/modules/party-gift-randomizer/pages/index/index"
+                           hover-class="navigator-hover" class='list-item'>
+                    <view id="{{item.id}}" class="list-item-hd">
+                        <view class="list-text">Secret Halloween</view>
+                        <image class="list-img" src="/resources/images/kind/form.png"></image>
+                    </view>
+                </navigator>
+
+                <navigator open-type="reLaunch" url="/modules/wolf-law-officer/pages/index/index"
+                           hover-class="navigator-hover" class='list-item'>
+                    <view id="{{item.id}}" class="list-item-hd">
+                        <view class="list-text">狼人杀小法官</view>
+                        <image class="list-img" src="/resources/images/kind/form.png"></image>
+                    </view>
+                </navigator>
+
+            </block>
+
+        </view>
+    </view>
 </view>
