--- a/modules/party-gift-randomizer/pages/chooseGift/chooseGift.wxss
+++ b/modules/party-gift-randomizer/pages/chooseGift/chooseGift.wxss
@@ -9,7 +9,7 @@ scroll-view {
     height: 470rpx;
     margin-top: 50rpx;
     padding-top: 60rpx;
-    border-top: solid 1px rgba(255,255,255,0.2);
+    border-top: solid 1px rgba(255, 255, 255, 0.2);
     margin-bottom: 30rpx;
 }
 
@@ -17,4 +17,3 @@ scroll-view {
     padding: 0;
     border-radius: 0;
 }
-
