--- a/modules/party-gift-randomizer/pages/participants/participants.wxml
+++ b/modules/party-gift-randomizer/pages/participants/participants.wxml
@@ -5,7 +5,8 @@
                 <view>
                     <image src="{{imageBaseUrl}}{{item.avatar[0].url}}"/>
                 </view>
-                <image class="ready-icon" src="{{'../../resources/images/ready.png'}}" wx:if="{{item.status=='ready'}}" ></image>
+                <image class="ready-icon" src="{{'../../resources/images/ready.png'}}"
+                       wx:if="{{item.status=='ready'}}"></image>
             </view>
         </view>
     </scroll-view>
@@ -16,15 +17,20 @@
 
     <!-- 当前用户为群主时显示 -->
     <view class="btn-start" wx:if="{{isShowStartButton}}">
-        <button plain bindtap='onClickStart' plain="true" >
+        <button plain bindtap='onClickStart' plain="true">
             <image src="{{'../../resources/images/start.png'}}"></image>
         </button>
     </view>
 
-    <modal wx:if="{{isShowReadyModal}}" title="补充身高信息" confirm-text="Yes" cancel-text="No" bindcancel="onClickCancel" bindconfirm="onClickConfirm">
-        <view>请填写身高体重便于朋友帮你购买：</view>
-        <view class="input-container"><view class="label">身高(cm)：</view><input class="input-height" type="text" placeholder="180" auto-focus bindinput="onInputHeight"/></view>
-        <view class="input-container"><view class="label">体重(kg)：</view><input class="input-weight" type="text" placeholder="75" auto-focus bindinput="onInputWeight"/></view>
+    <modal wx:if="{{isShowReadyModal}}" title="补充身高信息" confirm-text="Yes" cancel-text="No" bindcancel="onClickCancel"
+           bindconfirm="onClickConfirm">
+        <view>填写身高体重便于Ta帮你购买</view>
+        <view class="input-container">
+            <view class="label">身高(cm)：</view>
+            <input class="input-height" type="text" placeholder="180" auto-focus bindinput="onInputHeight"/></view>
+        <view class="input-container">
+            <view class="label">体重(kg)：</view>
+            <input class="input-weight" type="text" placeholder="75" auto-focus bindinput="onInputWeight"/></view>
     </modal>
 
 </view>
