--- a/modules/party-gift-randomizer/pages/share/share.wxml
+++ b/modules/party-gift-randomizer/pages/share/share.wxml
@@ -1,5 +1,5 @@
 <view class="page">
     <image src="{{qrcodeUrl}}"></image>
     <text>保存并分享二维码，让朋友们参加你的万圣趴</text>
-    <button plain class="secondary" bindtap='onClickSave'>存到相册</button>
+    <button plain class="secondary" bindtap='onClickSave'>妥善保存</button>
 </view>
