--- a/modules/party-gift-randomizer/pages/chooseGift/chooseGift.wxml
+++ b/modules/party-gift-randomizer/pages/chooseGift/chooseGift.wxml
@@ -21,18 +21,19 @@
             </view>
         </view>
     </view>
-
     <scroll-view scroll-y>
         <view class="gifts">
-            <button plain class="gift-wrapper"
+            <button disabled="{{item.selected}}"
+                    plain class="gift-wrapper"
                     data-id="{{item.id}}" wx:for="{{gifts}}" wx:key="{{index}}" wx:for-item="item"
                     bindtap="onClickGift">
+                <!--{{item.id}}-->
                 <view class="gift">
                     <image class="thumbnail" src="{{imageBaseUrl}}{{item.thumbnail[0].url}}"/>
                     <view class="avatar">
                         <view>
                             <image class="ready-icon" src="{{'../../resources/images/ready.png'}}"
-                                   wx:if="{{selectedGiftId===item.id}}"></image>
+                                   wx:if="{{selectedGiftId===item.id || item.selected}}"></image>
                         </view>
                     </view>
                 </view>
